🔧 Control-Tab für https://cp.nebuliton.de hinzugefügt

--- a/index.html
+++ b/index.html
@@ -71,6 +71,10 @@
       <i class="fas fa-server"></i>
       Panel
     </button>
+    <button onclick="switchTab(event, 'https://cp.nebuliton.de')">
+      <i class="fas fa-terminal"></i>
+      Control
+    </button>
     <button onclick="switchTab(event, 'https://status.nebuliton.de')">
       <i class="fas fa-signal"></i>
       Status
