--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       <i class="fas fa-server"></i>
       Panel
     </button>
-    <button onclick="switchTab(event, 'https://cp.nebuliton.de')">
+    <button onclick="switchTab(event, 'https://cp.nebuliton.io')">
       <i class="fas fa-terminal"></i>
       Control
     </button>
